--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-p {
-    padding: 10px;
-    margin: 15px;
+    font-family:'Montserrat', sans-serif;
+    margin:0;
+    padding:0;
 }
