--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,15 +1,24 @@
 {% extends "main_layout.html" %}
 {% block body %}
 <div class="container">
-	<div id='timeline-embed' style="width: 100%; height: 600px"></div>
-	<script type="application/javascript">
+	<div id="timeline"></div>
+	<link rel="stylesheet" href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/timeline.css') }}">
+    <script type="text/javascript" src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
+	<script>
+    $(document).ready(function(){
 		var topic = '{{ key_word|safe }}';
-		var topic = '{{ key_word }}';
-	    $(document).ready(function(){
-	        $.getJSON("/getTimelineData/".concat(topic),function(data){
-	            timeline = new TL.Timeline('timeline-embed', data, {debug:true});
-	        });
-	    });
-    </script>
+		var embed = document.getElementById('timeline');
+		embed.style.height = getComputedStyle(document.body).height;
+		$.getJSON("/getTimelineData/".concat(topic),function(data){
+			window.timeline = new TL.Timeline('timeline', data, {timenav_height_percentage:15, timenav_height_min:100, marker_height_min:25});
+			window.addEventListener('resize', function() {
+				var embed = document.getElementById('timeline');
+				embed.style.height = getComputedStyle(document.body).height;
+				timeline.updateDisplay();
+			})
+		});
+	});
+	</script>
 </div>
 {% endblock %}
