--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,25 @@
 body {
     font-family:'Montserrat', sans-serif;
+    background-color:#EFEFEF;
     margin:0;
     padding:0;
+}
+h1 {
+    color:#474747;
+    font-size:24px;
+    line-height:24px;
+}
+h2, span.year {
+    color:#FF3B3F;
+    font-family:'Fjalla One', sans-serif;
+    font-size:30px;
+    line-height:30px; 
+}
+h3 {
+    font-size:16px;
+    color:#CAEBF2;
+}
+
+.center {
+    text-align:center;
 }
