--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 	<h2>Search archived newspapers:</h2>
 	<form method="POST" action="/">
     {{ form.key_word.label }} {{ form.key_word() }}
+    {{ form.year.label }} {{ form.year() }}
     {{ form.submit() }}
 	</form>
 </div>
