--- a/templates/term-frequency-map.html
+++ b/templates/term-frequency-map.html
@@ -3,36 +3,105 @@
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <style>
-    svg {
-      position:absolute;
-      width:100%;
-      height:100%;
-      fill:#bfb;
-    }
-    #states {
-        fill:#a9a9a9;
-    }
-    path {
-      stroke:#474747;
-      stroke-linejoin:round;
-      stroke-linecap:round;
-    }
+svg {
+  position:absolute;
+  width:100%;
+  height:100%;
+  fill:#bfb;
+}
+#states {
+  fill:#a9a9a9;
+}
+.state_name {
+  fill:#CAEBF2;
+}
+path {
+  stroke:#EFEFEF;
+  stroke-linejoin:round;
+  stroke-linecap:round;
+}
 </style>
-  <svg>
-    <g id="states"></g>
-  </svg>
-  <h1 class="center">the United States in <span class="year">{{year}}</span></h1>
-  <script>
-      var selectedYear = '{{year|safe}}';
-      var svgStates = d3.select("svg #states"),states={},startYear=1790,currentYear=selectedYear;
-      var width = window.innerWidth,height = window.innerHeight;
-      var projection = d3.geo.albersUsa().translate([width/2,height/2]);
-      var path = d3.geo.path().projection(projection);
-      d3.json("/static/json/map_data/states.json", function(error, topologies) {
-        for (var i = 0; i < topologies.length; i++) {
-          states[startYear + i * 10] = topojson.feature(topologies[i], topologies[i].objects.stdin);
-        }
-        svgStates.selectAll("path").data(states[currentYear].features).enter().append("path").attr("d", path);
-      });
-  </script>
+<svg>
+  <g id="states"></g>
+</svg>
+<h1 class="center">the United States in <span class="year">{{year}}</span></h1>
+<script>
+  var selectedYear = '{{year|safe}}';
+  var censusYear = Math.round(selectedYear/10)*10;
+  var svgStates = d3.select("svg #states"),states={},startYear=1790,currentYear=censusYear;
+  var width = window.innerWidth,height = window.innerHeight;
+  var projection = d3.geo.albersUsa().translate([width/2,height/2]);
+  var path = d3.geo.path().projection(projection);
+  d3.json("/static/json/map_data/states.json", function(error, topologies) {
+    if (error) return console.error(error);
+    for (var i = 0; i < topologies.length; i++) {
+      states[startYear + i * 10] = topojson.feature(topologies[i], topologies[i].objects.stdin);
+    }
+    svgStates.selectAll("path").data(states[currentYear].features).enter().append("path").attr("d", path);
+    svgStates.selectAll(".state_name").data(states[currentYear].features).enter()
+      .append("text")
+      .attr("class","state_name")
+      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
+      .attr("dy", ".35em")
+      .text(function(d) { return d.properties.STATENAM; });
+/*    
+    
+    
+    svg.selectAll(".place-label")
+    .data(topojson.feature(uk, uk.objects.places).features)
+  .enter().append("text")
+    .attr("class", "place-label")
+    .attr("transform", function(d) { return "translate(" + projection(d.geometry.coordinates) + ")"; })
+    .attr("dy", ".35em")
+    .text(function(d) { return d.properties.name; });
+
+
+d3.json("/mbostock/raw/4090846/us.json", function(error, us) {
+  if (error) throw error;
+
+  g.append("g")
+      .attr("id", "states")
+    .selectAll("path")
+      .data(topojson.feature(us, us.objects.states).features)
+    .enter().append("path")
+      .attr("d", path)
+      .on("click", clicked);
+
+  g.append("path")
+      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
+      .attr("id", "state-borders")
+      .attr("d", path);
+});
+
+function clicked(d) {
+  var x, y, k;
+
+  if (d && centered !== d) {
+    var centroid = path.centroid(d);
+    x = centroid[0];
+    y = centroid[1];
+    k = 4;
+    centered = d;
+  } else {
+    x = width / 2;
+    y = height / 2;
+    k = 1;
+    centered = null;
+  }
+
+  g.selectAll("path")
+      .classed("active", centered && function(d) { return d === centered; });
+
+  g.transition()
+      .duration(750)
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")scale(" + k + ")translate(" + -x + "," + -y + ")")
+      .style("stroke-width", 1.5 / k + "px");
+}
+
+state.append("text")
+    .attr("dy", ".35em")
+    .text(function(d) { return d.name; });
+*/
+  });
+</script>
 {% endblock %}
