--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,18 +1,24 @@
 {% extends "main_layout.html" %}
 {% block body %}
-<div class="container">
-	<div id="timeline"></div>
-	<link rel="stylesheet" href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/timeline.css') }}">
-    <script type="text/javascript" src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
-	<script>
-    $(document).ready(function(){
-		var topic = '{{ key_word|safe }}';
+<div id="timeline"></div>
+<link rel="stylesheet" href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/timeline.css') }}">
+<script type="text/javascript" src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
+<script>
+	var topic = '{{key_word|safe}}';
+	$(document).ready(function(){
 		var embed = document.getElementById('timeline');
 		embed.style.height = getComputedStyle(document.body).height;
 		$.getJSON("/getTimelineData/".concat(topic),function(data){
 			// dragging not working??
-			window.timeline = new TL.Timeline('timeline', data, {timenav_height_percentage:15, timenav_height_min:100, marker_height_min:25});
+			console.log(data);
+			var options = {
+				debug:true, 
+				timenav_height_percentage:15, 
+				timenav_height_min:100, 
+				marker_height_min:25
+			};
+			window.timeline = new TL.Timeline('timeline', data, options);
 			window.addEventListener('resize', function() {
 				var embed = document.getElementById('timeline');
 				embed.style.height = getComputedStyle(document.body).height;
@@ -20,6 +26,5 @@
 			})
 		});
 	});
-	</script>
-</div>
+</script>
 {% endblock %}
