--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,26 +1,23 @@
 {% extends "main_layout.html" %}
 {% block body %}
 <div id="timeline"></div>
-<link rel="stylesheet" href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+<link rel="stylesheet" href="//cdn.knightlab.com/libs/timeline3/3.3.15/css/timeline.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/timeline.css') }}">
-<script type="text/javascript" src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline-min.js"></script>
+<script type="text/javascript" src="//cdn.knightlab.com/libs/timeline3/3.3.15/js/timeline-min.js"></script>
 <script>
-	var topic = '{{key_word|safe}}';
+	var topic = "{{key_word|safe}}";
 	$(document).ready(function(){
-		var embed = document.getElementById('timeline');
+		var embed = document.getElementById("timeline");
 		embed.style.height = getComputedStyle(document.body).height;
 		$.getJSON("/getTimelineData/".concat(topic),function(data){
-			// dragging not working??
-			console.log(data);
 			var options = {
-				debug:true, 
 				timenav_height_percentage:15, 
 				timenav_height_min:100, 
 				marker_height_min:25
 			};
-			window.timeline = new TL.Timeline('timeline', data, options);
-			window.addEventListener('resize', function() {
-				var embed = document.getElementById('timeline');
+			window.timeline = new TL.Timeline("timeline", data, options);
+			window.addEventListener("resize", function() {
+				var embed = document.getElementById("timeline");
 				embed.style.height = getComputedStyle(document.body).height;
 				timeline.updateDisplay();
 			})
