--- a/templates/term-frequency-map.html
+++ b/templates/term-frequency-map.html
@@ -2,6 +2,7 @@
 {% block body %}
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
+<script src="//d3js.org/d3-queue.v2.min.js"></script>
 <style>
 svg {
   position:absolute;
@@ -22,28 +23,40 @@ path {
 }
 </style>
 <svg>
-  <g id="states"></g>
+  <g id="states" class="center"></g>
 </svg>
 <h4 class="center">the United States in <span class="year">{{year}}</span></h4>
 <script>
+  var topic = "{{key_word|safe}}";
   var selectedYear = '{{year|safe}}';
+  
   var censusYear = Math.round(selectedYear/10)*10;
-  var svgStates = d3.select("svg #states"),states={},startYear=1790,currentYear=censusYear;
+  var svgStates = d3.select("svg #states");
   var width = window.innerWidth,height = window.innerHeight;
   var projection = d3.geo.albersUsa().translate([width/2,height/2]);
   var path = d3.geo.path().projection(projection);
-  d3.json("/static/json/map_data/states.json", function(error, topologies) {
-    if (error) return console.error(error);
-    for (var i = 0; i < topologies.length; i++) {
+  var wordCountData;
+	
+	d3_queue.queue()
+  .defer(d3.json, "/getMapData/".concat(topic).concat("/").concat(selectedYear))
+  .defer(d3.json, "/static/json/map_data/".concat(censusYear).concat(".json"))
+  .await(analyze);
+
+  function analyze(error, wordCounts, usMap) {
+    if(error) { console.log(error); }
+    //console.log(wordCounts)
+/*    for (var i = 0; i < topologies.length; i++) {
       states[startYear + i * 10] = topojson.feature(topologies[i], topologies[i].objects.stdin);
-    }
-    svgStates.selectAll("path").data(states[currentYear].features).enter().append("path").attr("d", path);
-    svgStates.selectAll(".state_name").data(states[currentYear].features).enter()
+    }*/
+    var states = topojson.feature(usMap, usMap.objects.stdin);
+    
+    svgStates.selectAll("path").data(states.features).enter().append("path").attr("d", path);
+    svgStates.selectAll(".state_name").data(states.features).enter()
       .append("text")
       .attr("class","state_name")
       .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
       .attr("dy", ".35em")
-      .text(function(d) { return d.properties.STATENAM; });
-  });
+      .text(function(d) { return wordCounts[d.id]; });
+  }
 </script>
 {% endblock %}
