--- a/templates/term-frequency-map.html
+++ b/templates/term-frequency-map.html
@@ -10,12 +10,11 @@ svg {
   height:100%;
   fill:#bfb;
 }
-.bubble {
-  fill:#CAEBF2;
-  fill-opacity: .5;
-}
 #states {
   fill:#a9a9a9;
+}
+.territory {
+  fill:#c3c3c3;
 }
 path {
   stroke:#EFEFEF;
@@ -29,8 +28,7 @@ path {
 <h4 class="center">the United States in <span class="year">{{year}}</span></h4>
 <script>
   var topic = "{{key_word|safe}}";
-  var selectedYear = '{{year|safe}}';
-  
+  var selectedYear = "{{year|safe}}";
   var censusYear = Math.round(selectedYear/10)*10;
   var svgStates = d3.select("svg #states");
   var width = window.innerWidth,height = window.innerHeight;
@@ -39,31 +37,49 @@ path {
   var wordCountData;
 	
 	d3_queue.queue()
-  .defer(d3.json, "/getMapData/".concat(topic).concat("/").concat(selectedYear))
+  //.defer(d3.json, "/getMapData/".concat(topic).concat("/").concat(selectedYear))
   .defer(d3.json, "/static/json/map_data/".concat(censusYear).concat(".json"))
   .await(analyze);
 
-  function analyze(error, wordCounts, usMap) {
+  function analyze(error, usMap) {//wordCounts, 
     if(error) { console.log(error); }
     //console.log(wordCounts)
 /*    for (var i = 0; i < topologies.length; i++) {
       states[startYear + i * 10] = topojson.feature(topologies[i], topologies[i].objects.stdin);
     }*/
-    var states = topojson.feature(usMap, usMap.objects.stdin);
-    var radius = d3.scale.sqrt().domain([0, wordCounts["max"]]).range([0, 20]);
+    var us_elements = topojson.feature(usMap, usMap.objects.stdin);
+    //var radius = d3.scale.sqrt().domain([0, wordCounts["max"]]).range([0, 20]);
     
-    svgStates.selectAll("path").data(states.features).enter().append("path").attr("d", path);
-/*    svgStates.selectAll(".state_name").data(states.features).enter()
-      .append("text")
-      .attr("class","state_name")
-      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
-      .attr("dy", ".35em")
-      .text(function(d) { return wordCounts[d.id]; });*/
+    svgStates.selectAll("path").data(us_elements.features).enter().append("path").attr("d", path)
+    .attr("class",function(d) { return isState(d); });
+    /*svgStates.selectAll(".us_element").data(us_elements.features).enter()
+      .attr("class","us_element")*/
+       
       
-    svgStates.append("g").attr("class", "bubble").selectAll("circle")
+/*    svgStates.append("g").attr("class", "bubble").selectAll("circle")
       .data(states.features).enter().append("circle")
       .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
       .attr("r", function(d) { return radius(wordCounts[d.id]); })
+      
+      svgStates.selectAll(".us_element").data(states.features).enter()
+      .append("text")
+      .attr("class","us_element")
+      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
+      .attr("dy", ".35em")
+      .text(function(d) { return wordCounts[d.id]; }); 
+      
+      
+*/
+  }
+  
+  function isState(us_element) {
+    var class_name, admit = us_element.properties.admit; 
+    if(admit != 0 && admit <= selectedYear) {
+      class_name = "state";
+    } else {
+      class_name = "territory";
+    }
+    return class_name;
   }
 </script>
 {% endblock %}
