--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -2,13 +2,22 @@
 <meta charset="utf-8">
 <html>
 <head>
-    <title>Newspaper timeline</title>
+    <title>Chronicling America Challenge</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <ul class="flashes">
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+{% endif %}
+{% endwith %}
 {% block body %}{% endblock %}
 </body>
 </html>
