--- a/templates/map.html
+++ b/templates/map.html
@@ -16,6 +16,10 @@ svg {
 .territory {
   fill:#c3c3c3;
 }
+.bubble {
+  fill:#CAEBF2;
+  fill-opacity:.6;
+}
 path {
   stroke:#EFEFEF;
   stroke-linejoin:round;
@@ -33,33 +37,30 @@ path {
   var width = window.innerWidth,height = window.innerHeight;
   var projection = d3.geo.albersUsa().translate([width/2,height/2]);
   var path = d3.geo.path().projection(projection);
-  var wordCountData;
 	
 	d3_queue.queue()
-  //.defer(d3.json, "/getMapData/".concat(topic).concat("/").concat(selectedYear))
   .defer(d3.json, "/static/map-data/json/".concat(censusYear).concat(".json"))
+  .defer(d3.json, "/getMapData/".concat(selectedYear))
   .await(analyze);
 
-  function analyze(error, usMap) {//wordCounts, 
+  function analyze(error, usMap, byStateData) {//wordCounts, 
     if(error) { console.log(error); }
-    //console.log(wordCounts)
+    //console.log(byStateData);
 /*    for (var i = 0; i < topologies.length; i++) {
       states[startYear + i * 10] = topojson.feature(topologies[i], topologies[i].objects.stdin);
     }*/
     var us_elements = topojson.feature(usMap, usMap.objects.stdin);
-    //var radius = d3.scale.sqrt().domain([0, wordCounts["max"]]).range([0, 20]);
-    
+
     svgStates.selectAll("path").data(us_elements.features).enter().append("path").attr("d", path)
     .attr("class",function(d) { return isState(d); });
     /*svgStates.selectAll(".us_element").data(us_elements.features).enter()
       .attr("class","us_element")*/
-       
-      
-/*    svgStates.append("g").attr("class", "bubble").selectAll("circle")
-      .data(states.features).enter().append("circle")
+
+    svgStates.append("g").attr("class", "bubble").selectAll("circle")
+      .data(us_elements.features).enter().append("circle")
       .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
-      .attr("r", function(d) { return radius(wordCounts[d.id]); })
-      
+      .attr("r", function(d) { return getRadius(d, byStateData); })
+/*      
       svgStates.selectAll(".us_element").data(states.features).enter()
       .append("text")
       .attr("class","us_element")
@@ -69,6 +70,15 @@ path {
       
       
 */
+  }
+  
+  function getRadius(us_element, data_set) {
+    var radius = d3.scale.sqrt().domain([0, data_set["max"]]).range([0, 20]);
+    if(data_set.hasOwnProperty(us_element.id)) {
+      return radius(data_set[us_element.id]);
+    } else {
+      return 0;
+    }
   }
   
   function isState(us_element) {
