--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<html>
+<html xmlns:xlink="http://www.w3.org/1999/xlink">
 <head>
     <title>Chronicling America Challenge</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
