--- a/templates/map.html
+++ b/templates/map.html
@@ -46,36 +46,39 @@ path {
   var path = d3.geo.path().projection(projection);
   var us_elements;
   d3_queue.queue().defer(d3.json, "{{e.getMapPath()}}").await(makeMap);
-  d3_queue.queue(){% for candidate in e.candidates %}.defer(d3.json, "{{e.getCandidateStatsPath(candidate)}}"){% endfor %}.await(addStats);
+  d3_queue.queue().defer(d3.json, "{{e.getStatsPath()}}").await(addStats);
 
   function makeMap(error, usMap) {
     if(error) { console.log(error); }
     us_elements = topojson.feature(usMap, usMap.objects.stdin);
     svgStates.selectAll("path").data(us_elements.features).enter().append("path").attr("d", path).attr("class",function(d) { return isState(d); });
-
-/*      
-      svgStates.selectAll(".us_element").data(states.features).enter()
-      .append("text")
-      .attr("class","us_element")
-      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
-      .attr("dy", ".35em")
-      .text(function(d) { return wordCounts[d.id]; }); 
-*/
   }
   
-  function addStats(error, c1Stats, c2Stats) {
+  function addStats(error, stats) {
     if(error) { console.log(error); }
-    addBubbles(c1Stats, "red");
-    addBubbles(c2Stats, "blue");
+    var color = "blue";
+    var max = stats[0].mentions.max;
+    for(i=0; i<stats.length; i++) {
+      stat = stats[i];
+      if(stat.mentions.max > max) max = stat.mentions.max;
+    }
+    for(i=0; i<stats.length; i++) {
+      if(i%2==1) {
+        color = "red";
+      }
+      stat = stats[i];
+      addBubbles(stat.candidate, stat.mentions, color, max);
+    }
   }
   
-  function addBubbles(stats, color) {
-    console.log(stats);
-    svgStates.append("g").attr("class",color).selectAll("circle")
-      .data(us_elements.features).enter().append("circle")
+  function addBubbles(c, m, color, max) {
+    svgStates.append("g").selectAll("a")
+      .data(us_elements.features).enter().append("a")
+      .attr("xlink:href", function(d) { var path = "getTimelinePath/".concat(year).concat("/").concat(c).concat("/").concat(d.properties.name); return path;})
+      .append("circle")
       .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
-      .attr("r", function(d) { return getRadius(d, stats); })
-      .attr("href", function(d) { return "";})
+      .attr("r", function(d) { return getRadius(d, m, max); })
+      .attr("class",color)
       .append("title").text(function(d) { return d.properties.name + "\nClick for timeline of coverage";});
   }
   
@@ -84,8 +87,8 @@ path {
     return [c[0],c[1] - amt];
   }
   
-  function getRadius(us_element, data_set) {
-    var radius = d3.scale.sqrt().domain([0, data_set["max"]]).range([0, 20]);
+  function getRadius(us_element, data_set, max) {
+    var radius = d3.scale.sqrt().domain([0, max]).range([0, 20]);
     if(data_set.hasOwnProperty(us_element.id)) {
       return radius(data_set[us_element.id]);
     } else {
@@ -102,5 +105,15 @@ path {
     }
     return class_name;
   }
+  
+  
+/*      
+      svgStates.selectAll(".us_element").data(states.features).enter()
+      .append("text")
+      .attr("class","us_element")
+      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
+      .attr("dy", ".35em")
+      .text(function(d) { return wordCounts[d.id]; }); 
+*/
 </script>
 {% endblock %}
