--- a/templates/map.html
+++ b/templates/map.html
@@ -3,41 +3,14 @@
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script src="//d3js.org/d3-queue.v2.min.js"></script>
-<style>
-svg {
-  position:absolute;
-  width:100%;
-  height:100%;
-  fill:#bfb;
-}
-#states {
-  fill:#a9a9a9;
-}
-.territory {
-  fill:#c3c3c3;
-}
-path {
-  stroke:#EFEFEF;
-  stroke-linejoin:round;
-  stroke-linecap:round;
-}
-.red, .blue {
-  fill-opacity:.6;
-}
-.red {
-  fill:#FF3B3F;
-}
-.blue {
-  fill:#CAEBF2;
-}
-.red :hover, .blue :hover {
-  fill-opacity:.8;
-}
-</style>
-<svg>
-  <g id="states" class="center"></g>
-</svg>
-<h4 class="center">the election of <span class="year">{{e.year}}</span></h4>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/map.css') }}">
+<div id="candidates" class="center">
+  <h4 class="center">the election of <span class="year">{{e.year}}</span></h4>
+  {% for candidate in e.candidates %}
+  <div class="candidate"><div class="party"></div><h6>{{candidate.first}} {{candidate.last}}</h6> | {{candidate.party}}</div>
+  {% endfor %}
+</div>
+<svg id="map" class="center"><g id="states"></g></svg>
 <script>
   var year = {{e.year}};
   var svgStates = d3.select("svg #states");
@@ -105,15 +78,5 @@ path {
     }
     return class_name;
   }
-  
-  
-/*      
-      svgStates.selectAll(".us_element").data(states.features).enter()
-      .append("text")
-      .attr("class","us_element")
-      .attr("transform", function(d) { return "translate(" + path.centroid(d) +")"})
-      .attr("dy", ".35em")
-      .text(function(d) { return wordCounts[d.id]; }); 
-*/
 </script>
 {% endblock %}
