--- a/static/css/map.css
+++ b/static/css/map.css
@@ -7,16 +7,16 @@ svg, g {
     padding:0;
 }
 #map {
-    position:absolute;
     width:100%;
     height:100%;
     padding:0;
     margin:0;
+    display:block;
+    fill:#A9A9A9;
 }
 div.party {
     width:15px;
     height:15px;
-    background-color:#FF3B3F;
     display:inline-block;
     margin-right:10px;
 }
@@ -24,10 +24,19 @@ div.candidate {
     padding-left:20px;
     display:inline-block;
 }
-#states {
-    width:900px;
-    height:500px;
-    fill:#A9A9A9;
+.red {
+    fill:#FF3B3F;
+    background-color:#FF3B3F;
+}
+.blue {
+    fill:#CAEBF2;
+    background-color:#CAEBF2;
+}
+circle {
+    fill-opacity:.6;
+}
+#states a :hover {
+    fill-opacity:.8;
 }
 #states path {
     stroke:#EFEFEF;
@@ -36,16 +45,4 @@ div.candidate {
 }
 .territory {
     fill:#C3C3C3;
-}
-.red, .blue {
-    fill-opacity:.6;
-}
-.red {
-    fill:#FF3B3F;
-}
-.blue {
-    fill:#CAEBF2;
-}
-.red :hover, .blue :hover {
-    fill-opacity:.8;
 }
