--- a/templates/map.html
+++ b/templates/map.html
@@ -21,7 +21,7 @@
   var path = d3.geo.path().projection(projection);
   var us_elements;
   d3_queue.queue().defer(d3.json, "{{e.getMapPath()}}").await(makeMap);
-  d3_queue.queue().defer(d3.json, "{{e.getStatsPath()}}").await(addStats);
+  d3_queue.queue().defer(d3.json, "/getCurrentElectionJson").await(addElectionData);
 
   function makeMap(error, usMap) {
     if(error) { console.log(error); }
@@ -29,21 +29,14 @@
     svgStates.selectAll("path").data(us_elements.features).enter().append("path").attr("d", path).attr("class",function(d) { return isState(d); });
   }
   
-  function addStats(error, stats) {
+  function addElectionData(error, election) {
     if(error) { console.log(error); }
-    var max = stats[0].mentions.max;
-    for(i=0; i<stats.length; i++) {
-      stat = stats[i];
-      if(stat.mentions.max > max) max = stat.mentions.max;
+    var max = election.max;
+    var candidates = election.candidates;
+    for(i=0; i<candidates.length; i++) {
+      candidate = candidates[i];
+      addBubbles(candidate.last, candidate.mentions, candidate.color, max, i);
     }
-    {% for candidate in e.candidates %}
-    for(i=0; i<stats.length; i++) {
-      if(stats[i].candidate == "{{candidate.last}}") {
-        stat = stats[i];
-        addBubbles(stat.candidate, stat.mentions, "{{candidate.color}}", max, i);
-      }
-    }
-    {% endfor %}
   }
   
   function addBubbles(c, m, color, max, i) {
