--- a/static/css/map.css
+++ b/static/css/map.css
@@ -2,23 +2,6 @@
     margin:0;
     padding:20px;
 }
-svg, g {
-    margin:0;
-    padding:0;
-}
-#map {
-    width:900px;
-    height:500px;
-    margin:auto;
-}
-#map svg {
-    width:100%;
-    height:100%;
-    padding:0;
-    margin:0;
-    display:block;
-    fill:#A9A9A9;
-}
 div.party {
     width:15px;
     height:15px;
@@ -37,19 +20,37 @@ div.candidate {
     padding-bottom:2px;
     border-bottom:2px solid #ACE0EB;
 }
-.red {
+.fill-red {
     fill:#FF3B3F;
     background-color:#FF3B3F;
 }
-.blue {
+.fill-blue {
     fill:#ACE0EB;
     background-color:#ACE0EB;
 }
-circle {
-    fill-opacity:.6;
+/*.state-winner-red {
+    stroke:#FF3B3F;
 }
-#states a :hover {
-    fill-opacity:1;
+.state-winner-blue {
+    stroke:#ACE0EB;
+}*/
+
+svg, g {
+    margin:0;
+    padding:0;
+}
+#map {
+    width:900px;
+    height:500px;
+    margin:auto;
+}
+#map svg {
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
+    display:block;
+    fill:#A9A9A9;
 }
 #states path {
     stroke:#EFEFEF;
@@ -58,4 +59,12 @@ circle {
 }
 .territory {
     fill:#C3C3C3;
+}
+a circle {
+/*    stroke-opacity:.8;
+    stroke-width:4px;*/
+    fill-opacity:.6;
+}
+a circle:hover {
+    fill-opacity:1;
 }
