--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,6 +1,6 @@
 #candidates {
     margin:0;
-    padding:20px;
+    padding:20px 20px 40px 20px;
 }
 div.party {
     width:15px;
@@ -28,51 +28,45 @@ div.candidate {
     fill:#ACE0EB;
     background-color:#ACE0EB;
 }
+svg, g {
+    margin:0;
+    padding:0;
+    overflow:visible;
+}
 /*.state-winner-red {
     stroke:#FF3B3F;
 }
 .state-winner-blue {
     stroke:#ACE0EB;
 }*/
-
-svg, g {
-    margin:0;
-    padding:0;
-}
-#map {
+#container {
     width:900px;
     height:500px;
     margin:auto;
 }
-#map svg {
+#map {
     width:100%;
     height:100%;
     padding:0;
     margin:0;
     display:block;
 }
-#map svg #states {
+#map #states {
     fill:#A9A9A9;
     stroke:#EFEFEF;
     stroke-linejoin:round;
     stroke-linecap:round;
-    z-index:0;
 }
-#map svg #states .territory {
+#map #states .territory {
     fill:#C3C3C3;
 }
-.pie {
-    fill:#ACE0EB;
-    stroke:#fff;
-    z-index:1;
-}
-.pie .fill-blue {
-    fill:#ACE0EB;
+#map #pies {
+    fill-opacity:.6;
 }
 a circle {
 /*    stroke-opacity:.8;
     stroke-width:4px;*/
-    fill-opacity:.6;
+
 }
 a circle:hover {
     fill-opacity:1;
