--- a/templates/map.html
+++ b/templates/map.html
@@ -5,125 +5,106 @@
 <script src="//d3js.org/d3-queue.v2.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/map.css') }}">
 <div id="candidates" class="center">
-  <h4 class="center">the election of <span class="year">{{e.year}}</span></h4>
+  <h4>the election of <span class="year">{{e.year}}</span></h4>
   {% for candidate in e.candidates %}
     <div class="candidate"><div class="party fill-{{candidate.color}}"></div>
     <h6{% if e.winner == candidate.last %} class="winner-{{candidate.color}}"{% endif %}>{{candidate.first}} {{candidate.last}}</h6> | {{candidate.party}}
     </div>
   {% endfor %}
 </div>
-<div id="map" class="center"><svg><g id="states"></g></svg></div>
+<div id="container" class="center">
+  <svg id="map"><g id="states"></g><g id="pies"></g></svg>
+</div>
 <script>
-  var year = {{e.year}};
-  var states = d3.select("#map svg #states");
-  //var width = window.innerWidth,height = window.innerHeight;
-  var projection = d3.geo.albersUsa().scale(1100);
-  var path = d3.geo.path().projection(projection);
-  d3_queue.queue().defer(d3.json, "{{e.getMapPath()}}").defer(d3.json, "/getCurrentElectionJson").await(makeMap);
-  
-  function makeMap(error, map, election) {
-    var map_elements = topojson.feature(map, map.objects.stdin);
-    states.selectAll("path").data(map_elements.features).enter().append("path")
-      .attr("d",path)
-      .attr("class",function(d) { return us_element_class(d); })
-      .attr("alt",function(d) { return d.id; });
-    addPies(map_elements, election);
-  }
-  
-  function addPies(map_elements, election) {
-    var g = states.selectAll(".pie").data(map_elements.features.filter(function(d) { return isMentioned(d, election.candidates); }))
-      .enter().append("svg").attr("class","pie").each(addPie).select("g");
-      
-    function addPie(d) {
-      var pie = d3.layout.pie().sort(null).value(function(c) { return getMentions(d, c.mentions); });
-      var r = radius(totalMentions(d,election.candidates), election.max);
-      var diam = 2*r;
-      var arc = d3.svg.arc().outerRadius(r).innerRadius(0); 
-      
-      var pie_svg = d3.select(this).attr("width", diam).attr("height", diam).append("g").attr("transform", "translate("+path.centroid(d)+")");//.attr("alt","")
-      pie_svg.selectAll(".arc").data(pie(election.candidates))
-        .enter().append("path").attr("class", "arc").attr("d", arc)
-        .attr("style","fill:#FF3B3F");
-        //.attr("class",function(c) { return "fill-"+c.data.color; });
-    }
-  }
-  
+var year = {{e.year}};
+var states = d3.select("#map #states");
+var pies = d3.select("#map #pies");
+//var width = window.innerWidth,height = window.innerHeight;
+var projection = d3.geo.albersUsa().scale(1200);
+var path = d3.geo.path().projection(projection);
+d3_queue.queue().defer(d3.json, "{{e.getMapPath()}}").defer(d3.json, "/getCurrentElectionJson").await(makeMap);
 
-    
-    /*
-                        .each(function(d, i) {
-                        d3.select(this).selectAll('path.area')
-                                .data([d])
-                            .enter()
-                                .append('path')
-    
-        //.attr("xlink:href", function(d) { return timelineLink(year, candidate.last, d);})
-        //.append("circle")
-        .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
-        //.attr("r", function(d) { var r = radius(getMentions(d, candidate.mentions), max); return r; })
-        //.attr("class", function(d) {return bubble_class(d, candidate);})
-        //.append("title").text(function(d) { return "See " + d.properties.name + " coverage of " + candidate.last;});
-        */
+function makeMap(error, map, election) {
+  if(error) console.log(error);
+  var map_elements = topojson.feature(map, map.objects.stdin);
+  states.selectAll("path").data(map_elements.features).enter().append("path")
+    .attr("d",path)
+    .attr("class",function(d) { return us_element_class(d); })
+    .attr("alt",function(d) { return d.id; });
+  addPies(map_elements, election);
+}
 
-  
-  function isMentioned(us_element, candidates) {
-    for(var i = 0; i < candidates.length; i++) {
-      var c = candidates[i];
-      if(us_element.id in c.mentions) return true;
-    }
-    return false;
+function addPies(map_elements, election) {
+  var g = pies.selectAll(".pie").data(map_elements.features.filter(function(d) { return isMentioned(d, election.candidates); }))
+    .enter().append("svg").attr("class","pie").each(addPie).select("g");
+      
+  function addPie(d) {
+    var pie = d3.layout.pie().sort(null).value(function(c) { return getMentions(d, c.mentions); }).padAngle(.1);
+    var r = radius(totalMentions(d,election.candidates), election.max);
+    var diam = 2*r;
+    var arc = d3.svg.arc().outerRadius(r).innerRadius(r/2); 
+    
+    var pie_svg = d3.select(this).attr("width", diam).attr("height", diam).append("g").attr("transform", "translate("+path.centroid(d)+")");
+    pie_svg.selectAll(".arc").data(pie(election.candidates)).enter().append("path").attr("class", function(c) { return arc_class(c.data); }).attr("d", arc);
+      //.attr("alt","")
   }
-  
-  function timelineLink(year, last_name, element) {
-    return "getTimelinePath/".concat(year).concat("/").concat(last_name).concat("/").concat(element.properties.name);
+}
+
+function isMentioned(us_element, candidates) {
+  for(var i = 0; i < candidates.length; i++) {
+    var c = candidates[i];
+    if(us_element.id in c.mentions) return true;
   }
+  return false;
+}
   
-  function adjustCenter(c, i, amt) {
-    if(i == 0) {
-      return [c[0],c[1] - amt];
-    } else {
-      return [c[0],c[1] + amt];
-    }
-  }
+function timelineLink(year, last_name, element) {
+  return "getTimelinePath/".concat(year).concat("/").concat(last_name).concat("/").concat(element.id);
+}
   
-  function totalMentions(us_element, candidates) {
-    var total = 0;
-    for(var i=0; i < candidates.length; i++) {
-      total += getMentions(us_element, candidates[i].mentions)
-    }
-    return total;
+function totalMentions(us_element, candidates) {
+  var total = 0;
+  for(var i=0; i < candidates.length; i++) {
+    total += getMentions(us_element, candidates[i].mentions);
   }
+  return total;
+}
   
-  function getMentions(us_element, mentions) {
-    if(us_element.id in mentions) {
-      return mentions[us_element.id];
-    } else {
-      return 0;
-    }
+function getMentions(us_element, mentions) {
+  if(us_element.id in mentions) {
+    return mentions[us_element.id];
+  } else {
+    return 0;
   }
+}
   
-  function radius(r, max) {
-    var rad = d3.scale.sqrt().domain([0, max]).range([5, 20]);
-    return rad(r);
-  }
+function radius(r, max) {
+  var rad = d3.scale.sqrt().domain([0, max]).range([10, 25]);
+  return rad(r);
+}
+
+function arc_class(c) {
+  return "arc fill-"+c.color;
+}
   
-  function bubble_class(us_element, candidate) {
-    var class_name = "fill-" + candidate.color;
-    if(candidate.won.includes(us_element.properties.abbrev)) {
-      class_name += " state-winner-";
-      class_name += candidate.color;
-    }
-    return class_name;
+function pie_class(el, c) {
+/*  var class_name = "state-winner-" + c.color;
+  if(c.won.includes(el.properties.abbrev)) {
+    class_name += ;
+    class_name += c.color;
   }
-  
-  function us_element_class(us_element) {
-    var class_name, admit = us_element.properties.admit; 
-    if(admit != 0 && admit <= year) {
-      class_name = "state";
-    } else {
-      class_name = "territory";
-    }
-    return class_name;
+  return class_name;*/
+}
+
+function us_element_class(us_element) {
+  var class_name, admit = us_element.properties.admit; 
+  if(admit != 0 && admit <= year) {
+    class_name = "state";
+  } else {
+    class_name = "territory";
   }
+  return class_name;
+}
+
 </script>
 {% endblock %}
